fix databae migration
